fix(grammar-checker): wrap long word in textarea

--- a/packages/extension-content-ui/src/components/grammar-fixer/grammar-fixer.scss
+++ b/packages/extension-content-ui/src/components/grammar-fixer/grammar-fixer.scss
@@ -117,6 +117,7 @@ vocably-button-copy {
   width: 100%;
   field-sizing: content;
   resize: none;
+  overflow-wrap: anywhere;
 
   &::placeholder {
     color: $v-light-color-muted;
